@@ -105,8 +105,9 @@ namespace MySql.Web.Security
 
         private const string schema2 =
             @"ALTER TABLE mysql_Membership 
-            ADD COLUMN PasswordKey char(16) AFTER Password, 
-            ADD COLUMN PasswordFormat tinyint AFTER PasswordKey, COMMENT='2'";
+            ADD PasswordKey char(16) AFTER Password, 
+            ADD PasswordFormat tinyint AFTER PasswordKey, 
+            CHANGE email email VARCHAR(128), COMMENT='2'";
 
 #endregion
 
